syntax="proto3";

import "google/protobuf/any.proto";

option go_package=".;rtc";

message LocalDescription { 
    string localID = 1;
    string remoteID = 2;
    SessionDescription sd = 3;
    IceCandidateDescription icd = 4;
}

message SessionDescription {
    string type = 1;
    string sdp = 2;
}

message IceCandidateDescription {
    string candidate = 1;
}

message RemoteDescription { 
    string localID = 1;
    string remoteID = 2;
    SessionDescription sd = 3;
    IceCandidateDescription icd = 4;
}

service RTC {

    rpc exchange(stream LocalDescription) return (stream RemoteDescription);

}